--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
   "description": "A single-agent system that breaks down goals into tasks, schedules them via APIs, includes ethical bias checks, and sends reminders.",
   "dependencies": {
     "@langchain/openai": "^0.6.9",
-    "dayjs": "^1.11.18",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "googleapis": "^155.0.1",
     "langchain": "^0.3.31",
     "lowdb": "^7.0.1",
-    "nanoid": "^5.1.5",
+    "mongoose": "^8.18.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "openai": "^5.15.0"
