Testing and .env update

--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@ GOOGLE_REFRESH_TOKEN=your-refresh-token
 
 # OpenAI
 OPENAI_API_KEY=your-openai-api-key
+
+# Scheduler (cron expressions)
+# Every minute (useful for testing) → change to "0 9 * * *" for 9 AM daily, etc.
+DAILY_SUMMARY_CRON=* * * * *
+DEADLINE_CHECK_CRON=* * * * *
+CALENDAR_SYNC_CRON=* * * * *
