--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=3000
 
 # MongoDB (local)
-MONGO_URI=mongodb://localhost:27017/ai_agent
+MONGO_URI=mongodb+srv://torretobraga003_db_user:7bjkSc9N6UMbpvXp@cluster0.60otcfs.mongodb.net/
 
 # Email notifications
 EMAIL_SERVICE=gmail
